# Anima-Artist-Mixer-Forge

./: .gitignore  CHANGELOG.md  LICENSE  OPTIMIZATION_NOTES.md  README.md  __init__.py  nodes.py  pyproject.toml  sample workflow.json
.github/workflows/: ci.yml  publish.yml
anima_mixer/: __init__.py  anchor.py  chain_tools.py  constants.py  nodes_core.py  nodes_diagnostics.py  nodes_probe.py  nodes_ui.py  options.py  parsing.py  patching.py  probe_stats.py  recipe.py  tag_vocab.py  wrapper.py
docs/: DEVELOPMENT.md  USAGE.md
pr_evidence/: README.md  compare-1024-16-single-double-multi.metrics.json  compare-1024-32-preset-two-sampler-yuchi.metrics.json  fresh-multi-artist-matrix-20260621_154650.metrics.json  generate_evidence_images.py  matrix_extra_model_paths.yaml  mode_preset_matrix.md  pr4_reported_issues.metrics.json  run_multi_artist_evidence.py  run_xy_preset_matrix.py  xy_preset_matrix.metrics.json  xy_preset_matrix_summary.md
tests/: automated_preset_test.py  live_ab_capture.py  live_comfy_smoke.py  live_drift_ab.py  test_diagnostics_nodes.py  test_live_drift_metrics.py  test_node_helpers.py  test_parsing_fixes.py  test_probe_report_v2.py  test_review_fixes.py  test_runtime_state.py  test_tag_vocab.py  test_tensor_math.py  test_v26_syntax.py  test_workflow_json.py
tools/: build_tag_vocab.py
workflow/: 01_quick_start.json  03_compare_artists.json  04_probe_autobalance.json  Shift testing.before-basic-simplify.json  anima_artist_basic_example.json  artist-layer-role-routing.json
workflow/node_usage_showcase/: 01_basic_recommended.json  README_zh.md  (+6 more)
(+5 files in other folders)
